## dynamic_analyzer.py
from typing import List
from cyber_reasoning_system import Vulnerability


class DynamicAnalyzer:
    def analyze_application(self, application: str) -> List[Vulnerability]:
        """
        Analyzes the given application for vulnerabilities and returns a list of identified vulnerabilities.

        Args:
            application (str): The application to be analyzed.

        Returns:
            List[Vulnerability]: A list of identified vulnerabilities.
        """
        vulnerabilities = []
        # Add identified vulnerabilities to the vulnerabilities list
        return vulnerabilities
