## misp_integration.py
from typing import List
from cyber_reasoning_system import ThreatIntel


class MISPIntegration:
    def get_threat_intelligence(self) -> List[ThreatIntel]:
        """
        Retrieves threat intelligence from MISP and returns a list of threat intelligence.

        Returns:
            List[ThreatIntel]: A list of threat intelligence.
        """
        threat_intelligence = []
        # Retrieve threat intelligence from MISP and add it to the threat_intelligence list
        return threat_intelligence
