## network_monitor.py
from typing import List
from cyber_reasoning_system import NetworkEvent


class NetworkMonitor:
    def monitor_network(self) -> List[NetworkEvent]:
        """
        Monitors the network for events and returns a list of network events.

        Returns:
            List[NetworkEvent]: A list of network events.
        """
        network_events = []
        # Monitor the network for events and add them to the network_events list
        return network_events
