## patch_generator.py
from typing import List
from cyber_reasoning_system import Vulnerability, Patch


class PatchGenerator:
    def generate_patch(self, vulnerability: Vulnerability) -> Patch:
        """
        Generates a patch for the given vulnerability.

        Args:
            vulnerability (Vulnerability): The vulnerability to generate a patch for.

        Returns:
            Patch: The generated patch.
        """
        patch = Patch()
        # Generate the patch code based on the vulnerability
        return patch
