## static_analyzer.py
from typing import List
from cyber_reasoning_system import Vulnerability


class StaticAnalyzer:
    def analyze_code(self, code: str) -> List[Vulnerability]:
        """
        Analyzes the given code for vulnerabilities and returns a list of identified vulnerabilities.

        Args:
            code (str): The code to be analyzed.

        Returns:
            List[Vulnerability]: A list of identified vulnerabilities.
        """
        vulnerabilities = []
        # Add identified vulnerabilities to the vulnerabilities list
        return vulnerabilities
