
    classDiagram
        class CRS{
            +identify_vulnerabilities() -> List[Vulnerability]
            +remediate_vulnerabilities(vulnerabilities: List[Vulnerability]) -> List[Patch]
        }
        class Vulnerability{
            +id: str
            +severity: str
            +description: str
            +language: str
        }
        class Patch{
            +id: str
            +language: str
            +code: str
        }
        class PatchGenerator{
            +generate_patch(vulnerability: Vulnerability) -> Patch
        }
        class StaticAnalyzer{
            +analyze_code(code: str) -> List[Vulnerability]
        }
        class DynamicAnalyzer{
            +analyze_application(application: str) -> List[Vulnerability]
        }
        class MISPIntegration{
            +get_threat_intelligence() -> List[ThreatIntel]
        }
        class ThreatIntel{
            +id: str
            +source: str
            +description: str
        }
        class NetworkMonitor{
            +monitor_network() -> List[NetworkEvent]
        }
        class NetworkEvent{
            +id: str
            +source_ip: str
            +destination_ip: str
            +event_type: str
        }
        CRS "1" -- "1" PatchGenerator: uses
        CRS "1" -- "1" StaticAnalyzer: uses
        CRS "1" -- "1" DynamicAnalyzer: uses
        CRS "1" -- "1" MISPIntegration: uses
        CRS "1" -- "1" NetworkMonitor: uses
    